improve event sync performance